# repstruc

./: .gitignore  LICENSE  README.md  pyproject.toml
Formula/: README.md  repstruc.rb
ai/: README.md
ai/data/: README.md
ai/data/interim/: README.md
ai/data/labels/: README.md
ai/data/processed/: README.md
ai/data/raw/: README.md
ai/data/splits/: README.md
ai/evaluation/: README.md
ai/evaluation/benchmarks/: README.md
ai/evaluation/errors/: README.md
ai/experiments/: README.md
ai/experiments/prompts/: README.md
ai/experiments/reports/: README.md
ai/models/: README.md
ai/models/cards/: README.md
ai/models/checkpoints/: README.md
ai/models/configs/: README.md
ai/models/exports/: README.md
ai/resources/: README.md
ai/resources/annotation-guides/: README.md
ai/resources/collection-criteria/: README.md
ai/resources/papers/: README.md
ai/resources/taxonomy/: README.md
ai/training/: README.md
ai/training/plans/: README.md
ai/training/runs/: README.md
ai/training/sweeps/: README.md
src/: README.md
src/repstruc/: README.md  cli.py  core.py
tests/: README.md  test_core.py
