[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repstruc"
version = "0.2.1"
description = "Generate and maintain dynamic README structure blocks for every folder in a repository."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Owen Arink"}]
dependencies = []

[project.scripts]
repstruc = "repstruc.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
